[project]
name = "mapnetwork-mcp"
version = "0.1.1"
description = "MCP server — generate styled map images via mapnetwork.app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mapnetwork-mcp = "mapnetwork_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
