[project]
name = "mapnetwork-mcp"
version = "0.1.4"
description = "MCP server — generate styled map images via mapnetwork.app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mapnetwork-mcp = "mapnetwork_mcp.server:main"

[project.urls]
Homepage = "https://mapnetwork.app"
Repository = "https://github.com/toruproject/mapnetwork-mcp"

[tool.hatch.build.targets.sdist]
exclude = ["/.idea", "/dist", "__pycache__", "/mcp-publisher*.exe", "/server.json", "/.mcpregistry_github_token", "/.mcpregistry_registry_token"]

[tool.hatch.build.targets.wheel]
exclude = ["/.idea", "__pycache__"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
